# mdsorto

./: .gitignore  Cargo.toml  code_review_plan.md  mdsorto.ini  readme.md
src/: main.rs
wrk_docs/: 2025.11.17 - CC - Code-Coverage-Analysis.md  2025.11.17 - CC - Coverage-Improvement-Plan.md  2025.11.17 - CC - Final-Coverage-Results.md  2025.11.17 - CR - MDSORTO-Comprehensive-Review.md
