[package]
name = "mdsorto"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.28"
libc = "0.2.147"
log = "0.4.20"
ratatui = "0.27"
strum = "0.26"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-util = "0.7.8"
tui-big-text = "0.5"
rand = "0.8.5"
build-time = "0.1.3"
simplelog = "^0.12.0"
ini = "1.3.0"
